--- a/_drafts/2020-09-15-draft.md
+++ b/_drafts/2020-09-15-draft.md
@@ -136,6 +136,8 @@ Create an Awesome Development Setup for Data Science using Atom (when Jupyter is
 
 The Python Software Foundation has a jobs board for people looking for jobs in Python (free account creation required) - [Python.org](https://www.python.org/accounts/login/?next=/jobs/create/) and [Twitter](https://twitter.com/ThePSF/status/1302698841628647431).
 
+PyDev of the Week: Débora Azevedo from [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/09/14/pydev-of-the-week-debora-azevedo/)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/09/08/python-on-microcontrollers-newsletter-circuitpython-day-wednesday-a-new-micropython-version-and-more-python-adafruit-circuitpython-circuitpythonday-micropython-thepsf/)? [MicroPython releases version 1.13](https://github.com/micropython/micropython/releases/tag/v1.13).
 
 ## Code Statistics
@@ -273,13 +275,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.1](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [6.0.0-alpha.3](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2020####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200912](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.13](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.5](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0rc1](https://www.python.org/download/pre-releases/).
 
 [1822 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
@@ -301,13 +303,13 @@ As always, if you run into trouble join us on [Discord](https://adafru.it/discor
 
 [jobs.adafruit.com](https://jobs.adafruit.com/) has returned and folks are posting their skills (including CircuitPython) and companies are looking for talented makers to join their companies - from Digi-Key, to Hackaday, Microcenter, Raspberry Pi and more.
 
-## NUMBER thanks!
+## 24,923 thanks!
 
-[![NUMBER THANKS](../assets/20200915/24kdiscord.jpg)](https://adafru.it/discord)
+[![24,000 THANKS](../assets/20200915/24kdiscord.jpg)](https://adafru.it/discord)
 
 [![Adafruit Discord](https://discordapp.com/api/guilds/327254708534116352/embed.png?style=banner3)](https://discord.gg/adafruit)
 
-The Adafruit Discord community, where we do all our CircuitPython development in the open, reached over NUMBER humans, thank you!  Adafruit believes Discord offers a unique way for CircuitPython folks to connect. Join today at [https://adafru.it/discord](https://adafru.it/discord).
+The Adafruit Discord community, where we do all our CircuitPython development in the open, reached over 24,923 humans, thank you!  Adafruit believes Discord offers a unique way for CircuitPython folks to connect. Join today at [https://adafru.it/discord](https://adafru.it/discord).
 
 ## ICYMI - In case you missed it
 
