--- a/_drafts/2020-09-15-draft.md
+++ b/_drafts/2020-09-15-draft.md
@@ -48,7 +48,7 @@ This issue, following CircuitPython Day, is the 100th issue of both this newslet
 
 [![CircuitPython Day: 9-9-2020](../assets/20200915/20200915cpday.jpg)](https://blog.adafruit.com/2020/09/09/today-is-circuitpython-day-lots-of-events-on-tap-circuitpythonday-circuitpython-python/)
 
-CircuitPython Day on September 9, 2020 (9/9/2020) came last Wednesday with projects, events and CircuitPython livestreams highlighting all things Python and Python on Hardware.
+CircuitPython Day on September 9, 2020 (9/9/2020) came last Wednesday with projects, events and CircuitPython livestreams highlighting all things Python and Python on Hardware. All videos are available on the Adafruit YouTube in [this playlist](https://www.youtube.com/playlist?list=PLjF7R1fz_OOXqPXt-XCGZbGxkg5J17KyA).
 
 If you're interested in creating CircuitPython Day 2021 projects or hosting events, videos, or livestreams, start planning now and watch around July for announcements.
 
@@ -137,6 +137,8 @@ Create an Awesome Development Setup for Data Science using Atom (when Jupyter is
 The Python Software Foundation has a jobs board for people looking for jobs in Python (free account creation required) - [Python.org](https://www.python.org/accounts/login/?next=/jobs/create/) and [Twitter](https://twitter.com/ThePSF/status/1302698841628647431).
 
 PyDev of the Week: Débora Azevedo from [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/09/14/pydev-of-the-week-debora-azevedo/)
+
+CircuitPython Weekly meeting for September 14th, 2020 [notes](https://github.com/adafruit/adafruit-circuitpython-weekly-meeting/blob/master/2020/2020-09-14.md) and [on YouTube](https://youtu.be/OZRr-B-1nUE)
 
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/09/08/python-on-microcontrollers-newsletter-circuitpython-day-wednesday-a-new-micropython-version-and-more-python-adafruit-circuitpython-circuitpythonday-micropython-thepsf/)? [MicroPython releases version 1.13](https://github.com/micropython/micropython/releases/tag/v1.13).
 
