--- a/_drafts/2020-09-29-draft.md
+++ b/_drafts/2020-09-29-draft.md
@@ -149,6 +149,10 @@ busybox-w32 is a port of BusyBox to the Microsoft Windows WIN32 API. BusyBox imp
 
 Dictionary view objects in Python - [JohnLekberg.com](https://johnlekberg.com/blog/2020-09-19-dict-view.html).
 
+PyDev of the Week: William Cox [from Mouse vs Python](https://www.blog.pythonlibrary.org/2020/09/28/pydev-of-the-week-william-cox/)
+
+CircuitPython Weekly Meeting for September 28th, 2020 [Notes](https://github.com/adafruit/adafruit-circuitpython-weekly-meeting/blob/master/2020/2020-09-28.md) and [on YouTube](https://youtu.be/f9pZtkRmqPQ)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/09/22/python-on-microcontrollers-newsletter-circuitpython-6-beta-0-discord-25k-and-much-more-python-adafruit-circuitpython-circuitpythonday-micropython-thepsf/)? [Apollo DSKY Alarm Indicator Panel Replica](https://github.com/rrainey/DSKY-alarm-panel-replica).
 
 ## Coming soon
@@ -309,13 +313,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.1](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [6.0.0-beta.0](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2020####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200926](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.13](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.5](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0rc2](https://www.python.org/download/pre-releases/).
 
 [1,845 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
