--- a/_drafts/2020-10-06-draft.md
+++ b/_drafts/2020-10-06-draft.md
@@ -135,6 +135,10 @@ micro:bit" - [Twitter](https://twitter.com/morrill_rob/status/131095950120240333
 
 Reading and Writing CSV Files in Python - [Real Python](https://twitter.com/realpython/status/1311682305006632963).
 
+PyDev of the Week: Frank Valcarcel [from Mouse vs Python](https://www.blog.pythonlibrary.org/2020/10/05/pydev-of-the-week-frank-valcarcel/)
+
+CircuitPython Weekly Meeting for October 5th, 2020 [Notes](https://github.com/adafruit/adafruit-circuitpython-weekly-meeting/blob/master/2020/2020-10-05.md) and [on YouTube](https://youtu.be/_BuIctXIFwo)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/09/29/python-on-microcontrollers-newsletter-halloween-events-projects-and-more-python-adafruit-circuitpython-circuitpythonday-micropython-thepsf/)? [Creating a CircuitPython Music Visualizer](https://steam-tokyo.com/making-circuitpython-music-visualizer/).
 
 ## Coming soon
@@ -280,13 +284,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.1](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [6.0.0-beta.2](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2020####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20201004](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.13](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.9.0](https://www.python.org/downloads/) is the latest Python release.
 
 [1,855 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
