New/updated Guides/libs, stars, etc

--- a/_drafts/2020-10-13-draft.md
+++ b/_drafts/2020-10-13-draft.md
@@ -93,15 +93,11 @@ Looking for adding a new board to CircuitPython? It's highly encouraged! Adafrui
 
 [![New Learn Guides](../assets/20201013/20201013learn.jpg)](https://learn.adafruit.com/)
 
-[title](url) from [name](url)
+[Adafruit BrainCraft HAT - Easy Machine Learning for Raspberry Pi](https://learn.adafruit.com/adafruit-braincraft-hat-easy-machine-learning-for-raspberry-pi) from [Melissa LeBlanc-Williams](https://learn.adafruit.com/users/MakerMelissa)
 
-[title](url) from [name](url)
+[IoT Twitter Listener Party Parrot](https://learn.adafruit.com/iot-twitter-listener-party-parrot) from [Liz Clark](https://learn.adafruit.com/users/BlitzCityDIY)
 
-[title](url) from [name](url)
-
-## Updated Learn Guides!
-
-[title](url) from [name](url)
+[LED Matrix Display for Bitmap Pixel Art](https://learn.adafruit.com/pixel-art-matrix-display) from [John Park](https://learn.adafruit.com/users/johnpark)
 
 ## CircuitPython Libraries!
 
@@ -115,19 +111,26 @@ If you'd like to contribute, CircuitPython libraries are a great place to start.
 
 You can check out this [list of all the Adafruit CircuitPython libraries and drivers available](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/blob/master/circuitpython_library_list.md). 
 
-The current number of CircuitPython libraries is **###**!
+The current number of CircuitPython libraries is **275**!
 
 **New Libraries!**
 
 Here's this week's new CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_DisplayIO_SH1107](https://github.com/adafruit/Adafruit_CircuitPython_DisplayIO_SH1107)
+ * [Adafruit_CircuitPython_TLA202x](https://github.com/adafruit/Adafruit_CircuitPython_TLA202x)
 
 **Updated Libraries!**
 
 Here's this week's updated CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_MS8607](https://github.com/adafruit/Adafruit_CircuitPython_MS8607)
+ * [Adafruit_CircuitPython_MotorKit](https://github.com/adafruit/Adafruit_CircuitPython_MotorKit)
+ * [Adafruit_CircuitPython_SharpMemoryDisplay](https://github.com/adafruit/Adafruit_CircuitPython_SharpMemoryDisplay)
+ * [Adafruit_CircuitPython_LIS3DH](https://github.com/adafruit/Adafruit_CircuitPython_LIS3DH)
+ * [Adafruit_CircuitPython_PyPortal](https://github.com/adafruit/Adafruit_CircuitPython_PyPortal)
+ * [Adafruit_CircuitPython_MatrixPortal](https://github.com/adafruit/Adafruit_CircuitPython_MatrixPortal)
+ * [Adafruit_Blinka](https://github.com/adafruit/Adafruit_Blinka)
 
 **PyPI Download Stats!**
 
@@ -212,7 +215,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
-[### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1857 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help -- Translating CircuitPython is now easier than ever!
 
