--- a/_drafts/2020-10-13-draft.md
+++ b/_drafts/2020-10-13-draft.md
@@ -132,6 +132,8 @@ Python Tip: dicts have a useful method called setdefault that can retrieve or se
 
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/10/06/python-on-microcontrollers-newsletter-new-circuitpython-beta-releases-and-more-python-adafruit-circuitpython-electrichalloween-micropython-thepsf/)? [Unexpected Maker FeatherS2 - ESP32-S2](https://unexpectedmaker.com/shop/feathers2-esp32-s2).
 
+PyDev of the Week: Sean Tibor on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/10/12/pydev-of-the-week-sean-tibor/)
+
 ## Coming soon
 
 [![Adafruit Metro M7](../assets/20201013/20201013imx.jpg)](https://blog.adafruit.com/2020/10/07/metro-m7-imx-rt1011-with-circuitpython/)
@@ -278,15 +280,15 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.1](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [6.0.0-beta.2](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2020####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20201010](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.13](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.9.0](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.10.0a1](https://www.python.org/download/pre-releases/).
 
-[1857 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1865 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help -- Translating CircuitPython is now easier than ever!
 
