--- a/_drafts/2020-10-20-draft.md
+++ b/_drafts/2020-10-20-draft.md
@@ -66,6 +66,8 @@ Text
 
 **#ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).**
 
+CircuitPython Weekly Meeting for October 13, 2020 ([notes](https://github.com/adafruit/adafruit-circuitpython-weekly-meeting/blob/master/2020/2020-10-13.md)) [on YouTube](https://www.youtube.com/watch?v=GN8sr7_nris)`
+
 ## Coming soon
 
 
