New/updated guides/libs, stars, etc.

--- a/_drafts/2020-10-20-draft.md
+++ b/_drafts/2020-10-20-draft.md
@@ -5,7 +5,7 @@ date: 2020-10-20 07:00:00 -0800
 categories: weekly
 ---
 
-- [ ] Kattni updates
+- [X] Kattni updates
 - [ ] change date
 - [ ] update title
 - [ ] Feature story
@@ -105,15 +105,13 @@ Looking for adding a new board to CircuitPython? It's highly encouraged! Adafrui
 
 [![New Learn Guides](../assets/20201020/20201020learn.jpg)](https://learn.adafruit.com/)
 
-[title](url) from [name](url)
+[Multi-tasking with CircuitPython](https://learn.adafruit.com/multi-tasking-with-circuitpython) from [Tim C](https://learn.adafruit.com/users/Foamyguy)
 
-[title](url) from [name](url)
+[Tombstone Matrix Portal](https://learn.adafruit.com/tombstone-matrix-portal) from [Noe and Pedro](https://learn.adafruit.com/users/pixil3d)
 
-[title](url) from [name](url)
+[tiAdafruit 9-DOF Orientation IMU Fusion Breakout - BNO085tle](https://learn.adafruit.com/adafruit-9-dof-orientation-imu-fusion-breakout-bno085) from [Bryan Siepert](https://learn.adafruit.com/users/siddacious)
 
-## Updated Learn Guides!
-
-[title](url) from [name](url)
+[Face Mask Efficacy Testing with SCIENCE!](https://learn.adafruit.com/raspberry-pi-camera-vision-face-mask-efficacy-testing) from [Carter Nelson](https://learn.adafruit.com/users/caternuson)
 
 ## CircuitPython Libraries!
 
@@ -127,19 +125,18 @@ If you'd like to contribute, CircuitPython libraries are a great place to start.
 
 You can check out this [list of all the Adafruit CircuitPython libraries and drivers available](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/blob/master/circuitpython_library_list.md). 
 
-The current number of CircuitPython libraries is **###**!
-
-**New Libraries!**
-
-Here's this week's new CircuitPython libraries:
-
-* [library](url)
+The current number of CircuitPython libraries is **276**!
 
 **Updated Libraries!**
 
 Here's this week's updated CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_Pypixelbuf](https://github.com/adafruit/Adafruit_CircuitPython_Pypixelbuf)
+ * [Adafruit_CircuitPython_MatrixPortal](https://github.com/adafruit/Adafruit_CircuitPython_MatrixPortal)
+ * [Adafruit_CircuitPython_Wiznet5k](https://github.com/adafruit/Adafruit_CircuitPython_Wiznet5k)
+ * [Adafruit_CircuitPython_PyPortal](https://github.com/adafruit/Adafruit_CircuitPython_PyPortal)
+ * [Adafruit_CircuitPython_AdafruitIO](https://github.com/adafruit/Adafruit_CircuitPython_AdafruitIO)
+ * [Adafruit_Blinka](https://github.com/adafruit/Adafruit_Blinka)
 
 ## What’s the team up to this week?
 
@@ -211,7 +208,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
-[### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1869 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help -- Translating CircuitPython is now easier than ever!
 
