--- a/_drafts/2020-10-20-draft.md
+++ b/_drafts/2020-10-20-draft.md
@@ -144,27 +144,25 @@ What is the team up to this week? Let’s check in!
 
 **Bryan**
 
+Over the past, week I finished the libraries for the TLA2021 and have moved onto the EMC2101, a neat little fan controller from SMSC. This lil' guy will watch an external temperature diode and compare it against various thresholds and adjust the fan settings as dictated by its configuration.
+
+The EMC2021 can interface with common 4-pin computer fans and will read the tachometer signal to report the fan speed and adjust the speed via the fan's PWM input. There are a bunch of interesting features that you'll probably only see on a fan controller, such as a programmable "spin up" setting that will give the fan some extra juice on startup to get it up to speed before settling down to the set temperature.
+
 [![Bryan](../assets/20201020/20201020bryan.jpg)](https://circuitpython.org/)
 
-
+One of the more large features, at least in terms of register space, is the look up table (LUT) that is used to specify the fan speed at different temperature thresholds. This allows you to modulate the fan speed based on a range of temperatures. This will allow you to make sure your only blowing as much air as needed which helps reduce noise and excess energy usage. Lastly, there are, of course, various alerts that can be set to trigger on temperature changes, as well as parameters to tune the sensor to the specific characteristics of the temperature diode. 
 
 **Dan**
 
-[![Dan](../assets/20201020/20201020dan.jpg)](https://circuitpython.org/)
+I was off work for a few weeks, and am now back. I finished the [Blinka \_bleio library](https://github.com/adafruit/Adafruit_Blinka_bleio) for Windows, Linux (including Raspberry Pi), and MacOS. I am working on a Learn Guide with setup steps and examples for all the platforms.
 
-
-
-**Jeff**
-
-[![Jeff](../assets/20201020/20201020jeff.jpg)](https://circuitpython.org/)
-
-
+The library mysteriously did not work properly on Raspberry Pi 3B+ and Pi 4B, but did work on Pi Zero 0W and Pi 3B+. It turns out this is due to a [firmware issue](https://github.com/RPi-Distro/bluez-firmware/issues/6) in the bluez-firmware package. Right now the workaround is to roll that package back to an earlier version, but I hope this will be fixed in the short term. Interestingly, very few people reported this problem, which indicates to me that very few people are using BLE on RPi at all.
 
 **Kattni**
 
-[![Kattni](../assets/20201020/20201020kattni.jpg)](https://circuitpython.org/)
+This week I published the [Adafruit QT Py and NeoPixel LEDs](https://learn.adafruit.com/qt-py-and-neopixel-leds) guide. The guide walks though wiring up NeoPixels to your QT Py and shows how to do basic animations on the base QT Py, and how to use the LED Animation library on the QT Py Haxpress. If you're looking to light it up with your QT Py, check out this guide.
 
-
+Since I was testing the LED Animation library with a SAMD21 M0 Express board, I added an FAQ to the LED Animation guide to explain which animations will work on these boards, as not all of them do. As well I explained the limitations of using multiple animations in sequence, and covered why the animations slow down over time if left running for many hours. If you want to use the LED Animation library with your SAMD21 MO Express board, check out [this FAQ](https://learn.adafruit.com/circuitpython-led-animations/faqs) to avoid any surprises.
 
 **Lucian**
 
@@ -174,15 +172,20 @@ What is the team up to this week? Let’s check in!
 
 **Melissa**
 
-[![Melissa](../assets/20201020/20201020melissa.jpg)](https://circuitpython.org/)
+This past week I updated a guide I had done on running [TensorFlow Lite on the Raspberry Pi 4](https://learn.adafruit.com/running-tensorflow-lite-on-the-raspberry-pi-4). The updates include adding setup instructions for the BrainCraft HAT as well as updating the instructions to use the latest version of TensorFlow.
 
-
+I also updated the [main PiTFT learn guide page](https://learn.adafruit.com/adafruit-2-2-pitft-hat-320-240-primary-display-for-raspberry-pi/easy-install), which is included in several guides to use the PiTFT Python install script that I had rewritten several weeks back. The guide has commands to automate selecting displays and orientations that work best as well as instructions for creating your own automated commands to install the display exactly the way you want..
 
 **Scott**
 
-[![Scott](../assets/20201020/20201020scott.jpg)](https://circuitpython.org/)
+In the last week I knocked out three issue blocking the next stable release:
+* Unreliable auto-reload on SAMD21.
+* Flickering _pew module on SAMD21.
+* I2C timeouts on STM32 due to incorrect time keeping.
 
+With these issues fixed, we're very close to our first release candidate. A release candidate is a very we think is stable but want to test more before releasing it as such. A release candidate is marked as stable after it's been used for a week or so without major issues by folks willing to try it out. So, if you are adventurous, please give us a hand in testing the latest release candidate.
 
+Next on my list is finishing the light and deep sleep API. It will enable the lowest power modes on the ESP32-S2 and make it easier to add for other platforms.
 
 ## Upcoming events!
 
