New/updated guides, libs, stars.

--- a/_drafts/2020-10-27-draft.md
+++ b/_drafts/2020-10-27-draft.md
@@ -94,15 +94,15 @@ Looking for adding a new board to CircuitPython? It's highly encouraged! Adafrui
 
 [![New Learn Guides](../assets/2020mmdd/2020mmddlearn.jpg)](https://learn.adafruit.com/)
 
-[title](url) from [name](url)
+[Matrix Portal Scoreboard](https://learn.adafruit.com/matrix-portal-scoreboard) from [John Park](https://learn.adafruit.com/users/johnpark)
 
-[title](url) from [name](url)
+[DIY Desktop Calculator with CircuitPython](https://learn.adafruit.com/diy-rpn-desktop-calculator-with-circuitpython) from [Jeff Epler](https://learn.adafruit.com/users/jepler)
 
-[title](url) from [name](url)
+[Matrix Portal RGB Display Handbag](https://learn.adafruit.com/matrix-portal-rgb-display-handbag) from [Erin St. Blaine](https://learn.adafruit.com/users/firepixie)
 
-## Updated Learn Guides!
+[Creating MatrixPortal Projects with CircuitPython](https://learn.adafruit.com/creating-projects-with-the-circuitpython-matrixportal-library) from [Melissa LeBlanc-Williams](https://learn.adafruit.com/users/MakerMelissa)
 
-[title](url) from [name](url)
+[Image Correction for RGB LED Matrices](https://learn.adafruit.com/image-correction-for-rgb-led-matrices) from [Phil Burgess](https://learn.adafruit.com/users/pburgess)
 
 ## CircuitPython Libraries!
 
@@ -116,19 +116,30 @@ If you'd like to contribute, CircuitPython libraries are a great place to start.
 
 You can check out this [list of all the Adafruit CircuitPython libraries and drivers available](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/blob/master/circuitpython_library_list.md). 
 
-The current number of CircuitPython libraries is **###**!
+The current number of CircuitPython libraries is **276**!
 
 **New Libraries!**
 
 Here's this week's new CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_MCP2515](https://github.com/adafruit/Adafruit_CircuitPython_MCP2515)
+ * [Adafruit_CircuitPython_MonsterM4sk](https://github.com/adafruit/Adafruit_CircuitPython_MonsterM4sk)
 
 **Updated Libraries!**
 
 Here's this week's updated CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_LED_Animation](https://github.com/adafruit/Adafruit_CircuitPython_LED_Animation)
+ * [Adafruit_CircuitPython_BLE_Magic_Light](https://github.com/adafruit/Adafruit_CircuitPython_BLE_Magic_Light)
+ * [Adafruit_CircuitPython_BLE_BerryMed_Pulse_Oximeter](https://github.com/adafruit/Adafruit_CircuitPython_BLE_BerryMed_Pulse_Oximeter)
+ * [Adafruit_CircuitPython_RockBlock](https://github.com/adafruit/Adafruit_CircuitPython_RockBlock)
+ * [Adafruit_CircuitPython_MLX90393](https://github.com/adafruit/Adafruit_CircuitPython_MLX90393)
+ * [Adafruit_CircuitPython_PCF8591](https://github.com/adafruit/Adafruit_CircuitPython_PCF8591)
+ * [Adafruit_CircuitPython_SHTC3](https://github.com/adafruit/Adafruit_CircuitPython_SHTC3)
+ * [Adafruit_CircuitPython_MAX31856](https://github.com/adafruit/Adafruit_CircuitPython_MAX31856)
+ * [Adafruit_CircuitPython_BME680](https://github.com/adafruit/Adafruit_CircuitPython_BME680)
+ * [Adafruit_CircuitPython_Display_Text](https://github.com/adafruit/Adafruit_CircuitPython_Display_Text)
+ * [Adafruit_CircuitPython_MCP230xx](https://github.com/adafruit/Adafruit_CircuitPython_MCP230xx)
 
 **PyPI Download Stats!**
 
@@ -213,7 +224,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
-[### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1878 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help -- Translating CircuitPython is now easier than ever!
 
