CP weekly, pydev, v numbers.

--- a/_drafts/2020-10-27-draft.md
+++ b/_drafts/2020-10-27-draft.md
@@ -5,7 +5,7 @@ date: 2020-10-27 07:00:00 -0800
 categories: weekly
 ---
 
-- [ ] Kattni updates
+- [x] Kattni updates
 - [ ] change date
 - [ ] update title
 - [ ] Feature story
@@ -146,6 +146,10 @@ Machine Learning for Accounting with Python course - [Coursera](https://www.cour
 The PythonBytes podcast: Take the PSF survey and Will Vincent & Carlton Gibson drop by - [pythonbytes.fm](https://pythonbytes.fm/episodes/show/204/take-the-psf-survey-and-will-carlton-drop-by).
 
 Python Core Developers Q&A - Ask a Core Dev Anything - broadcast on October 20th - [YouTube](https://www.youtube.com/watch?v=gXMdfBTcOfQ).
+
+PyDev of the Week: William Horton [from Mouse vs Python](https://www.blog.pythonlibrary.org/2020/10/26/pydev-of-the-week-william-horton/)
+
+CircuitPython Weekly Meeting for October 26th, 2020 [Notes](https://github.com/adafruit/adafruit-circuitpython-weekly-meeting/blob/master/2020/2020-10-26.md) and [on YouTube](https://youtu.be/3UIsmOIAhJg)
 
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/10/20/python-on-microcontrollers-newsletter-circuitpython-6-release-candidate-new-hardware-more-python-adafruit-circuitpython-electronichalloween-micropython-thepsf/)? [Why Learning Python is Perfect for Beginners, Career-Changers, and Anyone Else](https://learntocodewith.me/resources/why-learn-python/).
 
@@ -299,13 +303,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.1](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [6.0.0-rc.0](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2020####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20201026](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.13](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.9.0](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.10.0a1](https://www.python.org/download/pre-releases/).
 
 [1878 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
