New/updated libs/guides, stars.

--- a/_drafts/2020-11-03-draft.md
+++ b/_drafts/2020-11-03-draft.md
@@ -92,15 +92,23 @@ Looking for adding a new board to CircuitPython? It's highly encouraged! Adafrui
 
 [![New Learn Guides](../assets/20201103/20201103learn.jpg)](https://learn.adafruit.com/)
 
-[title](url) from [name](url)
+[Remote Control Candy Dispenser Ghost](https://learn.adafruit.com/ble-claw) from [Noe and Pedro](https://learn.adafruit.com/users/pixil3d)
 
-[title](url) from [name](url)
+[3D Printed Frankenstein Monster with NeoPixel Eyes](https://learn.adafruit.com/neopixel-frankenstein) from [Liz Clark](https://learn.adafruit.com/users/BlitzCityDIY)
 
-[title](url) from [name](url)
+[CircuitPython BLE Libraries on Any Computer](https://learn.adafruit.com/circuitpython-ble-libraries-on-any-computer) from [Dan Halbert](https://learn.adafruit.com/users/danhalbert)
 
-## Updated Learn Guides!
+[Matrix Portal New Guide Scroller](https://learn.adafruit.com/matrix-portal-new-guide-scroller) from [Brent Rubell](https://learn.adafruit.com/users/brubell)
 
-[title](url) from [name](url)
+[Adafruit Voice Bonnet](https://learn.adafruit.com/adafruit-voice-bonnet) from [Kattni](https://learn.adafruit.com/users/kattni)
+
+[Adafruit QT Py Activity Timer and Hydration Reminder](https://learn.adafruit.com/qt-py-activity-timer-and-hydration-reminder) from [Kattni](https://learn.adafruit.com/users/kattni)
+
+[AdaBox 016](https://learn.adafruit.com/adabox016) from [John Park](https://learn.adafruit.com/users/johnpark)
+
+[Using Google Assistant on the BrainCraft HAT](https://learn.adafruit.com/using-google-assistant-on-the-braincraft-hat) from [Melissa LeBlanc-Williams](https://learn.adafruit.com/users/MakerMelissa)
+
+[Make a Pi Trash Classifier with Machine Learning and Lobe](https://learn.adafruit.com/lobe-trash-classifier-machine-learning) from [Jen Fox](https://learn.adafruit.com/users/jenfoxbot)
 
 ## CircuitPython Libraries!
 
@@ -114,19 +122,29 @@ If you'd like to contribute, CircuitPython libraries are a great place to start.
 
 You can check out this [list of all the Adafruit CircuitPython libraries and drivers available](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/blob/master/circuitpython_library_list.md). 
 
-The current number of CircuitPython libraries is **###**!
+The current number of CircuitPython libraries is **279**!
 
 **New Libraries!**
 
 Here's this week's new CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_LC709203F](https://github.com/adafruit/Adafruit_CircuitPython_LC709203F)
+ * [Adafruit_CircuitPython_EMC2101](https://github.com/adafruit/Adafruit_CircuitPython_EMC2101)
 
 **Updated Libraries!**
 
 Here's this week's updated CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_BNO08x](https://github.com/adafruit/Adafruit_CircuitPython_BNO08x)
+ * [Adafruit_CircuitPython_Waveform](https://github.com/adafruit/Adafruit_CircuitPython_Waveform)
+ * [Adafruit_CircuitPython_BLE_Heart_Rate](https://github.com/adafruit/Adafruit_CircuitPython_BLE_Heart_Rate)
+ * [Adafruit_CircuitPython_PyPortal](https://github.com/adafruit/Adafruit_CircuitPython_PyPortal)
+ * [Adafruit_CircuitPython_MIDI](https://github.com/adafruit/Adafruit_CircuitPython_MIDI)
+ * [Adafruit_CircuitPython_Fingerprint](https://github.com/adafruit/Adafruit_CircuitPython_Fingerprint)
+ * [Adafruit_CircuitPython_ImageLoad](https://github.com/adafruit/Adafruit_CircuitPython_ImageLoad)
+ * [Adafruit_CircuitPython_VCNL4010](https://github.com/adafruit/Adafruit_CircuitPython_VCNL4010)
+ * [Adafruit_CircuitPython_MatrixPortal](https://github.com/adafruit/Adafruit_CircuitPython_MatrixPortal)
+ * [CircuitPython_Community_Bundle](https://github.com/adafruit/CircuitPython_Community_Bundle)
 
 ## What’s the team up to this week?
 
@@ -202,7 +220,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
-[### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1881 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help -- Translating CircuitPython is now easier than ever!
 
