--- a/_drafts/2020-11-03-draft.md
+++ b/_drafts/2020-11-03-draft.md
@@ -5,7 +5,7 @@ date: 2020-11-03 07:00:00 -0800
 categories: weekly
 ---
 
-- [ ] Kattni updates
+- [x] Kattni updates
 - [ ] change date
 - [ ] update title
 - [ ] Feature story
