Adding Bryan's stuff

--- a/_drafts/2020-11-03-draft.md
+++ b/_drafts/2020-11-03-draft.md
@@ -210,8 +210,11 @@ What is the team up to this week? Let’s check in!
 
 **Bryan**
 
-[![Bryan](../assets/20201103/20201103bryan.jpg)](https://circuitpython.org/)
+I've been testing new prototypes and doing maintenance on existing libraries. I should have hardware to test another revision of the CAN FeatherWing by the time this gets to you; we're moving to a new controller that is in essence a 2515 with an integrated transceiver in a smaller package!
 
+It's not uncommon to see multiple versions of an IC in different packages, sometimes integrated with associated components to make manufacturing a bit simpler. A great, and a bit unique, example of this is the case of some of Trinamic's excellent stepper drivers; The TMC2209 is a controller with a great feature set that includes useful stuff like current-based stall prevention that enables sensorless homing on 3D printers. This and more is packed into a diminutive QFN package. 
+
+You may have recently [EYE on NPI](https://blog.adafruit.com/2020/06/18/eye-on-npi-tmc2226-sa-ultra-silent-stepper-motor-driver-eyeonnpi-digikey-adafruit-digikey-adafruit-trinamic_mc/) where ladyada looked at Trinamic's new TMC2226 that has a lot of the features of the TMC2209 in a TSSOP package. In fact, it has all the features of the TMC2209 because it's the same guts in a new package. The larger TSSOP package has the advantage of a larger thermal pad for heat dissipation, as well as being easier to inspect by eye thanks to having external pins.
 
 
 **Dan**
