Adding Bryan's section

--- a/_drafts/2020-11-10-draft.md
+++ b/_drafts/2020-11-10-draft.md
@@ -209,6 +209,11 @@ Here's this week's updated CircuitPython libraries:
 ## What’s the team up to this week?
 
 What is the team up to this week? Let’s check in!
+**Bryan**
+
+As expected I was able to test the hardware for the TMP117 temperature sensor last week, and it went very well! I finished the CircuitPython library for the  over the last week, and in the process found a new favorite temp sensor! The data layout is quite  easy to use, and the feature set works quite well for simple temperature related tasks. I'll be using this little gem in a few upcoming personal projects.
+
+Additionally after bodgeing one little bug, I was able to verify the hardware for the new revision of the CAN FeatherWing which uses the MCP25625 controller with the integrated transciever. Since this chip allows for a further shrinking of the required space, I think it's quite likely you'll see this chip in other, smaller forms in the future.
 
 **Dan**
 
