Reword lead story, add versions and PyDevOTW

--- a/_drafts/2020-11-10-draft.md
+++ b/_drafts/2020-11-10-draft.md
@@ -23,11 +23,11 @@ View this email in your browser.
 
 Hi everyone! It's the latest Python for Microcontrollers newsletter, brought you by the community! We're on [Discord](https://discord.gg/HYqvREz), [Twitter](https://twitter.com/search?q=circuitpython&src=typed_query&f=live), and for past newsletters - [view them all here](https://www.adafruitdaily.com/category/circuitpython/). If you're reading this on the web, [subscribe here](https://www.adafruitdaily.com/). Let's get started!
 
-## 60 Single Board Computers now run CircuitPython!
+## Blinka now supports 60 Single Board Computers!
 
-[![60 Single Board Computers now run CircuitPython](../assets/20201110/20201110blinka.jpg)](https://circuitpython.org/blinka)
+[![Blinka, the CircuitPython snake mascot, holding hands with Tux, the Linux penguin mascot](../assets/20201110/20201110blinka.jpg)](https://circuitpython.org/blinka)
 
-This week, the number of single board computers (SBC) that run the CircuitPython compatibility library Blinka on Python 3 reached 60 boards!
+As of this week, Blinka now supports 60 single board computers (SBC). Blinka allows SBCs to run most of the 280+ CircuitPython libraries.
 
 ## CircuitPython 6.0.0-rc.1 released
 
@@ -37,11 +37,11 @@ Release candidate 1 is the second release candidate of CircuitPython 6.0.0. The 
 
 ## CircuitPython in Space Update
 
-[![CircuitPython in Space](../assets/20201110/20201110space1.jpg)](https://circuitpython.org/)
+[![CircuitPython in Space](../assets/20201110/20201110space1.jpg)](https://pycubed.org)
 
-[![CircuitPython in Space](../assets/20201110/20201110space.jpg)](https://circuitpython.org/)
+[![CircuitPython in Space](../assets/20201110/20201110space.jpg)](https://pycubed.org)
 
-At least 4 spacecraft running CircuitPython 5.4.1 are launching in December by NASA!
+At least 4 spacecraft running CircuitPython 5.3.1 are launching in December by NASA! More info at [pycubed.org](https://pycubed.org)
 
 ## The LCA2021 #swagbadge Project
 
@@ -120,6 +120,8 @@ A new book - Drawing from data: resources for data exploration with Python - [Dr
 On code isolation in Python - [rushter.com](https://rushter.com/blog/python-code-isolation/).
 
 Python 3.10.0a2 is now available for testing - [Python Dev Blog](https://www.python.org/downloads/release/python-3100a2/).
+
+PyDev of the Week: Mary Chester-Kadwell on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/11/09/pydev-of-the-week-mary-chester-kadwell/)
 
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/11/03/python-on-microcontrollers-newsletter-new-raspberry-pi-400-ulab-1-0-and-more-python-adafruit-circuitpython-micropython-thepsf/k)? [The Raspberry Pi 400 is here!](https://blog.adafruit.com/2020/11/02/raspberry-pi-400-is-here-adafruit-raspberry_pi-raspberrypi400-raspberrypi/).
 
@@ -270,13 +272,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.1](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [6.0.0-rc.1](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2020####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20201107](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.13](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.9.0](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.10.0a2](https://www.python.org/download/pre-releases/).
 
 [1886 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
