--- a/_drafts/2020-11-10-draft.md
+++ b/_drafts/2020-11-10-draft.md
@@ -125,6 +125,8 @@ Python 3.10.0a2 is now available for testing - [Python Dev Blog](https://www.pyt
 
 PyDev of the Week: Mary Chester-Kadwell on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/11/09/pydev-of-the-week-mary-chester-kadwell/)
 
+CircuitPython Weekly Meeting for November 9th, 2020 [on YouTube](https://youtu.be/AabMLtbAH2s) and [notes](https://github.com/adafruit/adafruit-circuitpython-weekly-meeting/blob/master/2020/2020-11-09.md)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/11/03/python-on-microcontrollers-newsletter-new-raspberry-pi-400-ulab-1-0-and-more-python-adafruit-circuitpython-micropython-thepsf/k)? [The Raspberry Pi 400 is here!](https://blog.adafruit.com/2020/11/02/raspberry-pi-400-is-here-adafruit-raspberry_pi-raspberrypi400-raspberrypi/).
 
 ## Coming soon
